# Estudo_FastAPI

fast_zero/: pyproject.toml
fast_zero/src/fast_zero/: app.py  schemas.py
fast_zero/tests/: test_app.py
