[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabtx",email = "gabrieltx040413@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.*"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)"
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev src/fast_zero/app.py'
test = 'pytest --cov=src/fast_zero -vv'
post_test = 'coverage html'

[tool.poetry]
packages = [{include = "fast_zero", from = "src"}]

[tool.ruff]
line-length = 79
extend-eclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I','F','E','W','PL','PT']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]
